# DewaruciCpp

./: CMakeLists.txt  CMakeListsTest.txt  main.cpp
assets/: input3.xlsx  points_data_fixed.txt  profiletype_fb.json  profiletype_hp.json  profiletype_l.json
config/: database.json
data/: shipsdb.db
docs/: DATABASE_README.md  TESTING_PATH.md
documentation/: ProfileController.md
qml/: Main.qml
qml/components/: InputComboBoxOriginal.qml
qml/components/section0/: LinearIsotropicMaterials.qml  ProfileCalculationTest.qml  ProfileTable.qml
qml/components/section0/FrameArrangement/Frame/: YZFrame.qml
qml/components/section0/LinearIsotropicMaterials/: LinearIsotropicMaterials.qml
qml/components/section0/ProfileTable/: ProfileTable.qml
qml/examples/: ProfileManagementExample.qml
qml/pages/: FrameArrangement.qml  MaterialAndProfileLibrary.qml
src/controllers/: FrameArrangementXZController.cpp  FrameArrangementXZController.h  FrameArrangementYZController.cpp  FrameArrangementYZController.h  FrameArrangementYZFrameController.cpp  FrameArrangementYZFrameController.h  LinearIsotropicMaterialsController.cpp  LinearIsotropicMaterialsController.h  StructureProfileTableController.cpp  StructureProfileTableController.h
src/database/: Database.h  DatabaseConfig.cpp  DatabaseConfig.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseExample.cpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseShipConnection.cpp  DatabaseShipConnection.h  MaterialDatabase.cpp  MaterialDatabase.h  README.md  dewaruci.db-shm  dewaruci.db-wal
src/database/models/: BaseModel.cpp  BaseModel.h  FrameArrangementXZ.cpp  FrameArrangementXZ.h  FrameArrangementYZ.cpp  FrameArrangementYZ.h  LinearIsotropicMaterials.cpp  LinearIsotropicMaterials.h  StructureProfileTable.cpp  StructureProfileTable.h  UserModel.cpp  UserModel.h
src/utils/: PathUtils.h
tests/: test_database_path.bat  test_database_path.cpp
(+6 files in other folders)
